@@ -12,6 +12,7 @@ Bug fixes:
 - PR#5735: %apply and %revapply not first class citizens
 - PR#5738: first class module patterns not handled by ocamldep
 - PR#5742: missing bound checks in Array.sub
+- PR#5757: GC compaction bug (crash)
 
 
 OCaml 4.00.0:
